rename variables, introduce public getters in GameUtil